! fixed the imdb::trailers() method. Note that IMDB now only lists their own
  videos, so the imdb_trailers class is (currently) useless.
- removed the imdb_trailers class from checks. As IMDB seems to no longer
  list external trailers, they will either fail. The code for the class will
  remain in the repository for now - one never knows...

v1.2.1 (15.11.2009)
-------------------
! version info was not updated in the base class
! imdb: minor fix for releaseInfo()
! imdb::language() was broken
+ imdb::creator() method backported from trunk
! minor fix to imdbsearch class backported
+ imdbsearch: added method reset() to clean up the search results array
  (backported from trunk@r257)
! imdb::officialSites() returned a bunch of internal links not belonging here
  (backported fix from trunk@r260)
! imdb::runtimes() and imdb::sountrack() was broken (backported fix from trunk@r262)

v1.2.0 (04.10.2009)
-------------------
+ the test pages now support a "cron-mode" passing "cron=1" at the URL, i.e.
  plain text output, and only on failures (intended for automated tests)
! movie: fixed a small initialization issue (wrong type for keywords)
! movie: episodes() returned bool false (instead of empty array) if no episodes

v1.1.6 (29.09.2009)
-------------------
+ movie: added method to retrieve keywords (thanx to Balamir for the code!)
+ movie: method cast() now also has the headshots included (thumbs and big)
* test/ directory has been missing in Makefile, and "make uninstall" left some
  files on the system
+ added version and revision info to the classes (to be shown with the test page
  results)
+ let the test page prepend "." and ".." to PHPs include_path so it runs out of
  the box

v1.1.5 (24.09.2009)
-------------------
! hopefully fixed "invalid stream resource" on some network timeouts
+ movie: added method to retrieve movie types (if specified)
! person: fixed a property missing in initialization