@@ -13,6 +13,7 @@ v1.2.2
 - removed the imdb_trailers class from checks. As IMDB seems to no longer
   list external trailers, they will either fail. The code for the class will
   remain in the repository for now - one never knows...
++ added new method imdb::keywords_all() (to retrieve the full list)
 
 v1.2.1 (15.11.2009)
 -------------------
